# Honkai-Star-Rail-farm-script

./: .breakpoints  .gitattributes  .replit  LICENSE  PRCHECKLIST  README.md  e.txt  main.py  main.spec  pyproject.toml  replit.nix  requirements.txt  settings.py  setup.ifp  test.py
.github/workflows/: codeql.yml  py.yml
Tesseract-OCR/tessdata/: deu.traineddata  eng.user-words
Tesseract-OCR/tessdata/configs/: bigram  box.train  box.train.stderr  digits  get.images  hocr  linebox  lstmbox  quiet  strokewidth  txt
Tesseract-OCR/tessdata/tessconfigs/: matdemo  segdemo
pytweening/: __init__.py
