[tool.poetry]
name = "repl-nix-pythonscreenreadstuff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pythonscreenreadstuff"}]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
