[tool.poetry]
name = "repl-nix-pythonscreenreadstuff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pythonscreenreadstuff"}]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
pyautogui = "^0.9.54"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
